# my-webnote

./: CHANGELOG.md  README.md  README_BUILD.md  package-lock.json  package.json
server/: Cargo.toml  README.md  build.rs  build.sh  rustfmt.toml  test.rs
server/.cargo/: config.toml
server/benches/: path_matching.rs
server/components/common-log-macro/: Cargo.toml
server/components/common-log-macro/src/: lib.rs
server/components/common-makestruct-macro/: Cargo.toml
server/components/common-makestruct-macro/src/: lib.rs
server/components/common-page-macro/: Cargo.toml
server/components/common-page-macro/src/: lib.rs
server/components/common-smartcpy-macro/: Cargo.toml
server/components/common-smartcpy-macro/src/: lib.rs
server/etc/: serve.yaml  server.yaml
server/migrations/: 20240710083754_init.sql
server/src/: lib.rs  main.rs
server/src/cache/: memory.rs  mod.rs  redis.rs
server/src/cmd/: api.rs  mod.rs  serve.rs  start.rs
server/src/config/: config.rs  config_api.rs  config_serve.rs  mod.rs  resources.rs  swagger.rs
server/src/context/: state.rs
server/src/handler/: auth.rs  browser_indexeddb.rs  browser_indexeddb_v2.rs  document.rs  folder.rs  mod.rs  settings.rs  user.rs
server/src/handler/api_v1/: user.rs
server/src/handler/legacy/: browser_indexeddb.axum.error.prompt.txt
server/src/handlers/: auths.rs  documents.rs  folders.rs  mod.rs  settings.rs  users.rs
server/src/handlers/api_v1/: users.rs
server/src/mgmt/: health.rs  logging.rs  metrics.rs  mod.rs  otel.rs
server/src/mgmt/apm/: logging.rs  metrics.rs  mod.rs  otel.rs  profiling.rs
server/src/models/: mod.rs  settings.rs  users.rs
server/src/monitoring/: health.rs  mod.rs  otel.rs
server/src/route/: auths.rs  browser_indexeddb.rs  document.rs  folder.rs  mod.rs  settings.rs  user.rs
server/src/route/api_v1/: users.rs
server/src/routes/: auths.rs  documents.rs  folders.rs  mod.rs  settings.rs  users.rs
server/src/routes/api_v1/: users.rs
server/src/store/: browser_indexeddb.rs  documents_mongo.rs  documents_sqlite.rs  folders_mongo.rs  folders_sqlite.rs  mod.rs  mongo.rs  settings_mongo.rs  settings_sqlite.rs  sqlite.rs  users_mongo.rs  users_sqlite.rs
server/src/types/: auths.rs  browser_indexeddb.rs  document.rs  documents.rs  folder.rs  folders.rs  mod.rs  settings.rs  users.rs
server/src/types/api_v1/: users.rs
server/src/utils/: auths.rs  browser_indexeddb.rs  cgroup.rs  ethers.rs  httpclients.rs  inets.rs  mems.rs  mod.rs  oauth2.rs  oidcs.rs  rsa_ciphers.rs  serde_beans.rs  snowflake.rs  types.rs  webs.rs
server/static/: 403.html  404.html  index.html  login.html
server/static/js/: crypto-js-4.1.1.min.js  ethers-5.2.esm.min.js  fp-3.4.2.min.js  jquery-3.6.0.min.js  jsencrypt-3.2.1.min.js  sha256-0.9.0.min.js
server/tests/: integration.rs  module1.rs
server/tests/cache/: mod.rs  redis.rs
src/renderer/src/components/CustomFontModal/: index.tsx
src/renderer/src/components/CustomFonts/: index.tsx
src/renderer/src/components/CustomMenu/: index.tsx
src/renderer/src/components/DownloadApp/: index.tsx
src/renderer/src/components/LanguageSwitcher/: index.tsx
src/renderer/src/components/WelcomePage/: index.tsx
src/renderer/src/i18n/locales/: zh-TW.ts
src/renderer/src/store/: cloudstorage.ts  localstorage.ts  storage.ts
ui/: CHANGELOG.md  README.md  README_BUILD.md  README_zh.md  electron-builder.yml  package-lock.json  package.json  pnpm-lock.yaml
ui/src/main/utils/: customFonts.ts  menu.ts
ui/src/renderer/: index.html
ui/src/renderer/src/: App.css  App.tsx
ui/src/renderer/src/components/BottomToolbar/: index.tsx
ui/src/renderer/src/components/CustomFontModal/: index.css  index.tsx
ui/src/renderer/src/components/CustomFonts/: index.tsx
ui/src/renderer/src/components/CustomLayout/: index.css  index.tsx
ui/src/renderer/src/components/CustomMenu/: index.css  index.tsx
ui/src/renderer/src/components/DownloadApp/: index.tsx
ui/src/renderer/src/components/EditableText/: index.tsx
ui/src/renderer/src/components/LanguageSwitcher/: index.tsx
ui/src/renderer/src/components/MyWebnoteBlockSuiteEditor/: index.tsx
ui/src/renderer/src/components/MyWebnoteLogo/: index.tsx
ui/src/renderer/src/components/NoteEditor/: index.tsx
ui/src/renderer/src/components/OperationBar/: index.css  index.tsx
ui/src/renderer/src/components/RevedrawApp/: index.css  index.tsx
ui/src/renderer/src/components/WelcomePage/: index.css  index.tsx
ui/src/renderer/src/hooks/useAddFile/: index.tsx
ui/src/renderer/src/hooks/useFileContextMenu/: index.tsx
ui/src/renderer/src/hooks/useFolderContextMenu/: index.tsx
ui/src/renderer/src/i18n/locales/: en.ts  zh-CN.ts  zh-TW.ts
ui/src/renderer/src/store/: blocksuite.ts  boardIndexeddb.ts  cloudstorage.ts  jotai.ts  localstorage.ts  menuIndexeddb.ts  storage.ts
ui/src/renderer/src/types/: file.ts
ui/src/renderer/src/utils/: file.ts  navigator.ts
