[package]
name = "revezone-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
#
# Lang libs.
regex = "1.10.3"
chrono = { version = "0.4.38", features = ["serde"] }
uuid = { version = "1.9.1", default-features = false, features = ["v4"] }
thiserror = "1.0.61"
anyhow = "1.0.86"
once_cell = "1.19.0"
#
# Config libs.
config = "0.14.0"
#
# Command line libs.
clap = "4.5.7"
# Serialization libs.
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.64"
serde_yaml = "0.9.32"
#
# Logger libs.
env_logger = "0.11.3"
log = "0.4.22"
#
# Prometheus libs.
lazy_static = "1.4.0"
prometheus = "0.13.4"
axum-prometheus = "0.6.1"
#
# Tracing libs.
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }
#
# Async core libs.
tokio = { version = "1.38.0", features = ["full", "tracing"] }
# Async core trait polymorphism libs.
async-trait = "0.1.81"
# Notice: Use optional dependencies to avoid slow automatic compilation during debugging
# (because if rely on console-subscriber, need to enable RUSTFLAGS="--cfg tokio_unstable" which
# will invalidate the compile-time cache).
console-subscriber = { version = "0.3.0", optional = true }
#tokio-console = "0.1.11"
#
# Web HTTP libs.
axum = { version = "0.7.5" }
hyper = { version = "1.3.1", features = ["full"] }
tower = "0.4.1"
tower-http = { version = "0.5.2", features = ["trace", "auth"] }
globset = "0.4.14" # ant glob path patterns
#
# Database libs.
mongo = "0.1.0"
# mongodb = "2.8.2"
syrette = "0.5.1"
sqlx = { version = "0.7.4", features = [
    "runtime-tokio-rustls",
    # "runtime-async-std",
    "sqlite",
    "macros",
    "chrono"
] }
# Swagger libs.
utoipa = { version = "4.2.3", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
mac_address = "1.1.7"
# Auth libs.
reqwest = { version = "0.12.5", features = ["json"] }
url = "2.3"
tower-cookies = "0.10.0"
oauth2 = "4.3"
openidconnect = "3.5.0"
jsonwebtoken = "9.3.0"
# Cache libs.
moka = { version = "0.12.8", features = ["future"] }
redis = { version = "0.25.4", features = ["tokio-comp", "cluster-async"] }

[features]
# Notice: Use optional dependencies to avoid slow automatic compilation during debugging
# (because if rely on console-subscriber, need to enable RUSTFLAGS="--cfg tokio_unstable" which
# will invalidate the compile-time cache).
tokio-console = ["console-subscriber"]

[[bin]]
name = "revezone_api"
# path = "src/cmd/api.rs"
path = "src/main.rs"

[dev-dependencies]
# Benchmarks libs.
criterion = "0.5.1"

[[bench]]
name = "path_matching"
harness = false

#
# [[bin]]
# name = "revezone_cli"
# path = "src/cmd/cli.rs"
#
[build]
# Enable experimental, but invalid?
# valid command-line: RUSTFLAGS="--cfg tokio_unstable" && cargo build
# see:https://github.com/wl4g-collect/tokio-rs-console/tree/main/console-subscriber#enabling-tokio-instrumentation
rustflags = ["--cfg", "tokio_unstable"]
